--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_save">Save</string>
+
+    <string name="hint_add_task">Add new task &#8230;</string>
+    <string name="hint_add_todo">Add new task &#8230;</string>
+    <string name="hint_add_note">Add new note &#8230;</string>
 
 </resources>
