--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="title_save">Save</string>
 
     <string name="hint_add_task">Add new task &#8230;</string>
-    <string name="hint_add_todo">Add new task &#8230;</string>
+    <string name="hint_add_todo">Add new todo &#8230;</string>
     <string name="hint_add_note">Add new note &#8230;</string>
+    <string name="toast_error_string">Error! Could not Save!</string>
 
 </resources>
